feat: paging and handle download attachment